Closed
Bug 462735
Opened 17 years ago
Closed 5 months ago
Setting contentEditable=false inside a document with designMode='on' fails
Categories
(Core :: DOM: Editor, defect, P5)
Tracking
()
RESOLVED
FIXED
151 Branch
| Tracking | Status | |
|---|---|---|
| firefox151 | --- | fixed |
People
(Reporter: amla70, Assigned: ltenenbaum)
References
(Blocks 1 open bug, Regressed 1 open bug)
Details
Attachments
(2 files)
According to http://www.w3.org/html/wg/html5/#contenteditable if an element has contentEditable=false then it should not be editable, even if the rest of the document has designMode='on'.
This testcase proves that Firefox, Safari and Opera fail to disable the editing in such situation.
Updated•17 years ago
|
The designMode isn't same as contenteditable="true" on root element. designMode property of the *document* makes all contents editable. You can think that desingMode emulates HTML editor, contenteditable attribute makes a part of static document editable.
# I think that the spec should explain more.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → INVALID
| Reporter | ||
Comment 2•16 years ago
|
||
The steps detailed in the spec states that given that condition the element shouldn't be editable, and it explains how to handle both contentEditable and designMode. It clearly states that if an element is marked as contentEditable=false then the user shouldn't be able to edit it, no matter if the surrounding content is made editable due to setting in a higher node contentEditable = true or designMode = true in the document.
Without this feature it's not possible to create non-editable blocks in a document with designMode, so in the end it means that it isn't useful to use designMode at all because people sometimes want the ability to mark some sentence/word/html as block that it's a single entity that can't be edited in the normal way, and the solution for those situations is to use contentEditable=false.
Until the spec is changed to remove this sentence this is a bug.
"or if it and its ancestors all have their contenteditable attribute set to the inherit state but the Document has designMode enabled, then the UA must treat the element as editable (as described below)."
Status: RESOLVED → REOPENED
Resolution: INVALID → ---
Comment 3•5 years ago
|
||
Bulk-downgrade of unassigned, untouched DOM/Storage bug's priority.
If you have reason to believe, this is wrong, please write a comment and ni :jstutte.
Severity: normal → S4
Priority: -- → P5
Blocks: contenteditable-false
| Assignee | ||
Comment 4•6 months ago
|
||
Updated•6 months ago
|
Assignee: nobody → ltenenbaum
Pushed by ltenenbaum@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/bf0c9c56445e
https://hg.mozilla.org/integration/autoland/rev/0f0bb7232161
Respect contenteditable=false in design mode document. r=masayuki
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/58912 for changes under testing/web-platform/tests
Pushed by rperta@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/8f624c8dead8
https://hg.mozilla.org/integration/autoland/rev/36954367884c
Revert "Bug 462735 - Respect contenteditable=false in design mode document. r=masayuki" for causing ba failures at browser_caching_states.js
Backed out for causing ba failures at browser_caching_states.js
Backout link
Push with failures
Failure log(s)
Flags: needinfo?(ltenenbaum)
Upstream PR merged by moz-wptsync-bot
| Assignee | ||
Updated•5 months ago
|
Flags: needinfo?(ltenenbaum)
Comment 10•5 months ago
|
||
Pushed by ltenenbaum@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/4f45c623ee6e
https://hg.mozilla.org/integration/autoland/rev/06e778e00fe4
Respect contenteditable=false in design mode document. r=masayuki
Comment 11•5 months ago
|
||
| bugherder | ||
Status: REOPENED → RESOLVED
Closed: 16 years ago → 5 months ago
status-firefox151:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 151 Branch
Regressions: 2031574
Regressions: 2031575
Updated•4 months ago
|
QA Whiteboard: [qa-triage-done-c152/b151]
You need to log in
before you can comment on or make changes to this bug.
Description
•