Bug 462735 - Respect contenteditable=false in design mode document. r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D287446